@@ -1,3 +1,5 @@
+2006/4/3 -- released version 20060403_trunk
+
 2006/4/2 -- released version 20060402_trunk
 
 2006/4/1 -- released version 20060401_trunk
